[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asmr"
authors = [{name = "coco", email = "0.0@asmr.software"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "requests >= 2.26",
    "click >= 8.0",
    "pyserial >=3.0",
    "watchdog >=2.1.6",
    "jinja2 >=3.0.0",
    "pyvisa >=1.11.3",
    "toml >=0.10.2",
]

[project.urls]
Home = "https://github.com/asmr-systems/toolkit"

[project.scripts]
asmr = "asmr.cli:main"
